# galois-cohomology

./: .gitignore  README.md  pyproject.toml
latex/: main.tex  references.bib  supplementary.tex
lean/: GaloisCohomology.lean  full-build-log.txt  lakefile.lean
lean/GaloisCohomology/: Basic.lean  CochainComplex.lean  Hilbert90.lean  LES.lean
python/galois_cohomology/: __init__.py  applications.py  cochains.py  cohomology.py  cup_product.py  exact_sequences.py  fields.py  modules.py  resolutions.py  restriction.py  tate.py  utils.py
roadmap/: HANDOFF_APPLICATIONS.md  HANDOFF_CORE_ENGINE.md  HANDOFF_GALOIS_INFRA.md  HANDOFF_LES.md  HANDOFF_RTSC.md  SYNTHESIS.md
roadmap/overnight/: COORDINATION_TO_RTSC.md  MAIN_AGENT_LOG.md  OVERNIGHT_PLAN.md
src/galois_cohomology/: __init__.py
tests/: test_applications.py  test_cochains.py  test_cohomology.py  test_cup_product.py  test_exact_sequences.py  test_fields.py  test_groups_extended.py  test_modules.py  test_resolutions.py  test_restriction.py  test_tate.py
